@@ -34,13 +34,18 @@ import de.uni_freiburg.informatik.ultimate.model.acsl.ast.ACSLResultExpression;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.ACSLType;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.ArrayAccessExpression;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.Assertion;
+import de.uni_freiburg.informatik.ultimate.model.acsl.ast.AtLabelExpression;
+import de.uni_freiburg.informatik.ultimate.model.acsl.ast.BaseAddrExpression;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.BinaryExpression;
+import de.uni_freiburg.informatik.ultimate.model.acsl.ast.BlockLengthExpression;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.BooleanLiteral;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.CastExpression;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.CodeAnnotStmt;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.Ensures;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.Expression;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.FieldAccessExpression;
+import de.uni_freiburg.informatik.ultimate.model.acsl.ast.FreeableExpression;
+import de.uni_freiburg.informatik.ultimate.model.acsl.ast.FunctionApplication;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.GhostDeclaration;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.GhostUpdate;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.GlobalGhostDeclaration;
@@ -48,9 +53,16 @@ import de.uni_freiburg.informatik.ultimate.model.acsl.ast.IdentifierExpression;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.IfThenElseExpression;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.IntegerLiteral;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.LoopInvariant;
+import de.uni_freiburg.informatik.ultimate.model.acsl.ast.MallocableExpression;
+import de.uni_freiburg.informatik.ultimate.model.acsl.ast.NotDefinedExpression;
+import de.uni_freiburg.informatik.ultimate.model.acsl.ast.NullPointer;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.OldValueExpression;
+import de.uni_freiburg.informatik.ultimate.model.acsl.ast.QuantifierExpression;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.RealLiteral;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.Requires;
+import de.uni_freiburg.informatik.ultimate.model.acsl.ast.SizeOfExpression;
+import de.uni_freiburg.informatik.ultimate.model.acsl.ast.StringLiteral;
+import de.uni_freiburg.informatik.ultimate.model.acsl.ast.SyntacticNamingExpression;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.UnaryExpression;
 import de.uni_freiburg.informatik.ultimate.model.acsl.ast.ValidExpression;
 
@@ -59,38 +71,29 @@ import de.uni_freiburg.informatik.ultimate.model.acsl.ast.ValidExpression;
  */
 public class ACSLPrettyPrinter {
 	public static String print(final ACSLNode node) {
-		if (node instanceof CodeAnnotStmt) {
-			return print(((CodeAnnotStmt) node).getCodeStmt());
-		}
-		if (node instanceof Assertion) {
-			return "//@ assert " + printExpression(((Assertion) node).getFormula()) + ";";
-		}
-		if (node instanceof Expression) {
-			return printExpression((Expression) node);
-		}
-		if (node instanceof GhostDeclaration) {
-			final GhostDeclaration decl = (GhostDeclaration) node;
+		switch (node) {
+		case final CodeAnnotStmt codeAnnot:
+			return print(codeAnnot.getCodeStmt());
+		case final Assertion assertion:
+			return "//@ assert " + printExpression(assertion.getFormula()) + ";";
+		case final Expression expr:
+			return printExpression(expr);
+		case final GhostDeclaration decl:
 			return printGhostDeclaration(decl.getType(), decl.getIdentifier(), decl.getExpr());
-		}
-		if (node instanceof GlobalGhostDeclaration) {
-			final GlobalGhostDeclaration decl = (GlobalGhostDeclaration) node;
+		case final GlobalGhostDeclaration decl:
 			return printGhostDeclaration(decl.getType(), decl.getIdentifier(), decl.getExpr());
-		}
-		if (node instanceof GhostUpdate) {
-			final GhostUpdate update = (GhostUpdate) node;
+		case final GhostUpdate update:
 			return String.format("//@ ghost %s = %s;", update.getIdentifier(), printExpression(update.getExpr()));
+		case final LoopInvariant loopInv:
+			return "//@ loop invariant " + printExpression(loopInv.getFormula()) + ";";
+		case final Requires req:
+			return "//@ requires " + printExpression(req.getFormula()) + ";";
+		case final Ensures ens:
+			return "//@ ensures " + printExpression(ens.getFormula()) + ";";
+		default:
+			// TODO: Add more cases
+			return node.toString();
 		}
-		if (node instanceof LoopInvariant) {
-			return "//@ loop invariant " + printExpression(((LoopInvariant) node).getFormula()) + ";";
-		}
-		if (node instanceof Requires) {
-			return "//@ requires " + printExpression(((Requires) node).getFormula()) + ";";
-		}
-		if (node instanceof Ensures) {
-			return "//@ requires " + printExpression(((Ensures) node).getFormula()) + ";";
-		}
-		// TODO: Add more cases
-		return node.toString();
 	}
 
 	private static String printGhostDeclaration(final ACSLType type, final String identifier, final Expression expr) {
@@ -103,162 +106,93 @@ public class ACSLPrettyPrinter {
 	}
 
 	private static String printExpression(final Expression expression) {
-		if (expression instanceof BooleanLiteral) {
-			return "\\" + ((BooleanLiteral) expression).getValue();
-		}
-		if (expression instanceof IntegerLiteral) {
-			return ((IntegerLiteral) expression).getValue();
-		}
-		if (expression instanceof RealLiteral) {
-			return ((RealLiteral) expression).getValue();
-		}
-		if (expression instanceof IdentifierExpression) {
-			return ((IdentifierExpression) expression).getIdentifier();
-		}
-		if (expression instanceof BinaryExpression) {
-			return printBinaryExpression((BinaryExpression) expression);
-		}
-		if (expression instanceof UnaryExpression) {
-			return printUnaryExpression((UnaryExpression) expression);
-		}
-		if (expression instanceof IfThenElseExpression) {
-			final IfThenElseExpression ite = (IfThenElseExpression) expression;
-			return String.format("(%s ? %s : %s)", printExpression(ite.getCondition()),
-					printExpression(ite.getThenPart()), printExpression(ite.getElsePart()));
-		}
-		if (expression instanceof ValidExpression) {
-			return String.format("\\valid(%s)", printExpression(((ValidExpression) expression).getFormula()));
-		}
-		if (expression instanceof FieldAccessExpression) {
-			final FieldAccessExpression f = (FieldAccessExpression) expression;
-			return String.format("(%s).%s", printExpression(f.getStruct()), f.getField());
-		}
-		if (expression instanceof OldValueExpression) {
-			return String.format("\\old(%s)", printExpression(((OldValueExpression) expression).getFormula()));
-		}
-		if (expression instanceof ArrayAccessExpression) {
-			return printArrayAccessExpression((ArrayAccessExpression) expression);
-		}
-		if (expression instanceof CastExpression) {
-			final CastExpression cast = (CastExpression) expression;
-			return String.format("(%s) %s", cast.getCastedType().getTypeName(), printExpression(cast.getExpression()));
-		}
-		if (expression instanceof ACSLResultExpression) {
-			return "\\result";
-		}
-		// TODO: Add more cases
-		return expression.toString();
+		return switch (expression) {
+		case final ACSLResultExpression res -> "\\result";
+		case final ArrayAccessExpression arrayAccess ->
+				"%s[%s]".formatted(printExpression(arrayAccess.getArray()), printExpression(arrayAccess.getIndex()));
+		case final AtLabelExpression at -> "\\at(%s, %s)".formatted(printExpression(at.getExpression()), at.getLabel());
+		case final BaseAddrExpression base -> "\\base_addr{%s}".formatted(printExpression(base.getExpression()));
+		case final BinaryExpression bin -> printBinaryExpression(bin);
+		case final BlockLengthExpression block ->
+				"\\block_length{%s}".formatted(printExpression(block.getExpression()));
+		case final BooleanLiteral boolLit -> "\\" + boolLit.getValue();
+		case final CastExpression cast ->
+				"(%s) %s".formatted(cast.getCastedType().getTypeName(), printExpression(cast.getExpression()));
+		case final FieldAccessExpression f -> "(%s).%s".formatted(printExpression(f.getStruct()), f.getField());
+		case final FreeableExpression freeable -> "\\freeable{%s}".formatted(printExpression(freeable.getExpression()));
+		case final FunctionApplication function -> "%s(%s)".formatted(function.getIdentifier(),
+				Arrays.stream(function.getArguments()).map(x -> printExpression(x)).collect(Collectors.joining(", ")));
+		case final IdentifierExpression id -> id.getIdentifier();
+		case final IfThenElseExpression ite -> "(%s ? %s : %s)".formatted(printExpression(ite.getCondition()),
+				printExpression(ite.getThenPart()), printExpression(ite.getElsePart()));
+		case final IntegerLiteral intLit -> intLit.getValue();
+		case final MallocableExpression malloc -> "\\mallocable{%s}".formatted(printExpression(malloc.getExpression()));
+		case final NotDefinedExpression nd ->
+				throw new AssertionError("NotDefinedExpression should not be shown as a string, "
+						+ "it should be only used for unsupported ACSL expressions.");
+		case final NullPointer np -> "\\null";
+		case final OldValueExpression old -> "\\old(%s)".formatted(printExpression(old.getExpression()));
+		case final QuantifierExpression quantifier -> printQuantifierExpression(quantifier);
+		case final RealLiteral realLit -> realLit.getValue();
+		case final SizeOfExpression sizeof -> "sizeof(%s)".formatted(printExpression(sizeof.getExpression()));
+		case final StringLiteral string -> "\"%s\"".formatted(string.getValue());
+		case final SyntacticNamingExpression naming ->
+				"%s : %s".formatted(naming.getIdentifier(), printExpression(naming.getExpression()));
+		case final UnaryExpression unary -> printUnaryExpression(unary);
+		case final ValidExpression valid -> "\\valid(%s)".formatted(printExpression(valid.getExpression()));
+		};
 	}
 
-	private static String printArrayAccessExpression(final ArrayAccessExpression expression) {
-		return printExpression(expression.getArray()) + "["
-				+ Arrays.stream(expression.getIndices()).map(x -> printExpression(x)).collect(Collectors.joining(", "))
-				+ "]";
+	private static String printQuantifierExpression(final QuantifierExpression quantifier) {
+		final String quantor = quantifier.isUniversal() ? "\\forall" : "\\exists";
+		final String vars = Arrays.stream(quantifier.getVariables())
+				.map(x -> x.getType().getTypeName() + " " + x.getName()).collect(Collectors.joining(", "));
+		return "%s %s; %s".formatted(quantor, vars, printExpression(quantifier.getSubformula()));
 	}
 
 	private static String printUnaryExpression(final UnaryExpression expression) {
-		final String op;
-		switch (expression.getOperator()) {
-		case ADDROF:
-			op = "&";
-			break;
-		case LOGICCOMPLEMENT:
-			op = "~";
-			break;
-		case LOGICNEG:
-			op = "!";
-			break;
-		case MINUS:
-			op = "-";
-			break;
-		case PLUS:
-			op = "+";
-			break;
-		case POINTER:
-			op = "*";
-			break;
-		default:
-			throw new AssertionError("Unhandled operator " + expression.getOperator());
-		}
+		final String op = switch (expression.getOperator()) {
+		case ADDROF -> "&";
+		case LOGICCOMPLEMENT -> "~";
+		case LOGICNEG -> "!";
+		case MINUS -> "-";
+		case PLUS -> "+";
+		case POINTER -> "*";
+		case LTLFINALLY, LTLGLOBALLY, LTLNEXT ->
+				throw new AssertionError("Unhandled operator " + expression.getOperator());
+		};
 		return op + printExpression(expression.getExpr());
 	}
 
 	// TODO: Check the operator precedence to avoid unnecessary parentheses
 	private static String printBinaryExpression(final BinaryExpression expression) {
-		final String op;
-		switch (expression.getOperator()) {
-		case ARITHDIV:
-			op = "/";
-			break;
-		case ARITHMINUS:
-			op = "-";
-			break;
-		case ARITHMOD:
-			op = "%";
-			break;
-		case ARITHMUL:
-			op = "*";
-			break;
-		case ARITHPLUS:
-			op = "+";
-			break;
-		case BITAND:
-			op = "&";
-			break;
-		case BITIFF:
-			op = "<-->";
-			break;
-		case BITIMPLIES:
-			op = "-->";
-			break;
-		case BITOR:
-			op = "|";
-			break;
-		case BITXOR:
-			op = "^";
-			break;
-		case COMPEQ:
-			op = "==";
-			break;
-		case COMPGEQ:
-			op = ">=";
-			break;
-		case COMPGT:
-			op = ">";
-			break;
-		case COMPLEQ:
-			op = "<=";
-			break;
-		case COMPLT:
-			op = "<";
-			break;
-		case COMPNEQ:
-			op = "!=";
-			break;
-		case LOGICAND:
-			op = "&&";
-			break;
-		case LOGICIFF:
-			op = "<==>";
-			break;
-		case LOGICIMPLIES:
-			op = "==>";
-			break;
-		case LOGICOR:
-			op = "||";
-			break;
-		case LOGICXOR:
-			op = "^^";
-			break;
-		case BITSHIFTLEFT:
-			op = "<<";
-			break;
-		case BITSHIFTRIGHT:
-			op = ">>";
-			break;
-		default:
-			throw new AssertionError("Unhandled operator " + expression.getOperator());
-		}
+		final String op = switch (expression.getOperator()) {
+		case ARITHDIV -> "/";
+		case ARITHMINUS -> "-";
+		case ARITHMOD -> "%";
+		case ARITHMUL -> "*";
+		case ARITHPLUS -> "+";
+		case BITAND -> "&";
+		case BITIFF -> "<-->";
+		case BITIMPLIES -> "-->";
+		case BITOR -> "|";
+		case BITXOR -> "^";
+		case COMPEQ -> "==";
+		case COMPGEQ -> ">=";
+		case COMPGT -> ">";
+		case COMPLEQ -> "<=";
+		case COMPLT -> "<";
+		case COMPNEQ -> "!=";
+		case LOGICAND -> "&&";
+		case LOGICIFF -> "<==>";
+		case LOGICIMPLIES -> "==>";
+		case LOGICOR -> "||";
+		case LOGICXOR -> "^^";
+		case BITSHIFTLEFT -> "<<";
+		case BITSHIFTRIGHT -> ">>";
+		case BITVECCONCAT, COMPPO, LTLRELEASE, LTLUNTIL, LTLWEAKUNTIL ->
+				throw new AssertionError("Unhandled operator " + expression.getOperator());
+		};
 		final String left = printExpression(expression.getLeft());
 		final String right = printExpression(expression.getRight());
 		return String.format("(%s %s %s)", left, op, right);
